--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -174,6 +174,9 @@ body, .container {
             background-color: $light;
             color: $dark;
         }
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
 
