--- a/src/style/style.css
+++ b/src/style/style.css
@@ -54,6 +54,11 @@ body, .container {
   align-items: center;
   font-family: "Romanesco", cursive;
   font-size: 35px; }
+  .header .header-logo {
+    max-width: 100%;
+    max-width: 100%;
+    height: calc(100% - 111px);
+    max-height: calc(100% - 111px); }
   @media screen and (max-width: 500px) {
     .header {
       font-size: 25px; } }
@@ -124,9 +129,37 @@ body, .container {
   max-width: 100%;
   min-height: 250px;
   color: #FFFFFF;
-  background-color: #181818; }
+  background-color: #181818;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center; }
+  .home-booking-section .booking-section-header {
+    flex-basis: 100%;
+    width: 100%;
+    max-width: 100%;
+    min-width: 100%; }
+  .home-booking-section .booking-options {
+    flex-basis: 50%;
+    width: 50%;
+    max-width: 50%;
+    min-width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap; }
+    .home-booking-section .booking-options .booking-options-title {
+      padding: 5px 5px 15px;
+      margin: 0px;
+      flex-basis: 100%;
+      width: 100%;
+      max-width: 100%;
+      min-width: 100%;
+      text-align: center;
+      font-size: 20px; }
   .home-booking-section .booking-button {
     padding: 6px 12px;
+    margin: 0px 10px;
     border: 2px solid #FFFFFF;
     border-radius: 4px;
     color: #FFFFFF; }
@@ -138,6 +171,25 @@ body, .container {
       color: #181818; }
     .home-booking-section .booking-button:hover {
       cursor: pointer; }
+
+.booking-barber-schedule {
+  padding: 25px 10px;
+  width: 100%;
+  max-width: 100%; }
+  .booking-barber-schedule .barber-schedule-appointments {
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap; }
+    .booking-barber-schedule .barber-schedule-appointments .barber-schedule-appointment {
+      padding: 6px 12px;
+      margin: 0px 10px 20px;
+      border: 2px solid #FFFFFF;
+      border-radius: 4px; }
+      .booking-barber-schedule .barber-schedule-appointments .barber-schedule-appointment.chosen-appointment {
+        background-color: #FFFFFF;
+        color: #181818; }
 
 .bio {
   width: 100%;
@@ -161,6 +213,9 @@ body, .container {
     width: 50%;
     max-width: 50%;
     min-width: 50%; }
+    .bio .bio-info .bio-maps-iframe {
+      width: 100%;
+      height: 400px; }
   .bio .bio-title {
     font-size: 30px; }
   @media screen and (max-width: 900px) {
