--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -236,6 +236,92 @@ body {
             cursor: pointer;
         }
     }
+
+    .booking-inputs-container {
+        padding: 30px 0px 10px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        .booking-input-box {
+            flex-basis: 50%;
+            width: 50%;
+            min-width: 50%;
+            max-width: 50%;
+            .booking-input-label {
+                margin: 0px;
+            }
+            .booking-input {
+                padding: 8px;
+                margin: 0px 10px 10px;
+                font-size: 18px;
+                border: 1px solid $light;
+                &:focus, &:active {
+                    outline: none;
+                    border-color: $grey-dark;
+                }
+            }
+        }
+        @media screen and (max-width: $tablet) {
+            padding: 30px 5px 10px;
+            .booking-input-box {
+                flex-basis: 100%;
+                width: 100%;
+                min-width: 100%;
+                max-width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                .booking-input-label {
+                    font-size: 18px;
+                    width: 100%;
+                    max-width: 450px;
+                }
+                .booking-input {
+                    margin-left: auto;
+                    margin-right: auto;
+                    width: 100%;
+                    max-width: 450px;
+                }
+            }
+        }
+    }
+
+    .booking-buttons {
+        padding: 50px 0px;
+        width: 100%;
+        max-width: 100%;
+        min-width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        .booking-buttons-save, .booking-buttons-cancel {
+            font-size: 20px;
+            padding: 6px 12px;
+            margin-left: 10px;
+            margin-right: 10px;
+            width: 95px;
+            max-width: 95px;
+            min-width: 95px;
+            text-align: center;
+            display: block;
+            border: 2px solid $light;
+            color: $light;
+            transition: background-color 120ms ease-in-out;
+            &:hover {
+                cursor: pointer;
+                background-color: $light;
+                color: $dark;
+            }
+        }
+        .booking-buttons-save {
+            background-color: $light;
+            color: $dark;
+            opacity: 0.6;
+            &:hover {
+                cursor: not-allowed;
+            }
+        }
+    }
 }
 
 .booking-barber-schedule {
@@ -297,7 +383,14 @@ body {
             height: 400px;
         }
         .bio-info-text {
-
+            color: $light;
+            a {
+                color: inherit;
+                text-decoration: none;
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
         }
     }
     .bio-title {
