--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=UnifrakturCook:700");
+@font-face {
+  font-family: 'Canterbury';
+  src: url("Canterbury.ttf") format("truetype");
+  font-weight: bold;
+  font-style: bold; }
 @keyframes slideDown {
   0% {
     height: 0px;
@@ -64,16 +69,28 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  font-family: "UnifrakturCook", cursive;
-  font-size: 35px; }
+  font-family: 'Canterbury';
+  font-size: 40px; }
   .header .header-logo {
     max-width: 100%;
     max-width: 100%;
     height: calc(100% - 111px);
     max-height: calc(100% - 111px); }
+  @media screen and (max-width: 768px) {
+    .header {
+      font-size: 30px; } }
   @media screen and (max-width: 500px) {
     .header {
-      font-size: 18px; } }
+      font-size: 30px; }
+      .header .header-title {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        text-align: center; }
+        .header .header-title .title-half {
+          width: 100%;
+          min-width: 100%;
+          max-width: 100%; } }
 
 .day-section {
   padding: 90px 10px;
@@ -110,7 +127,7 @@ body {
     width: 100%;
     text-align: center; }
     .day-section .day-section-schedulicity img {
-      width: 190px; }
+      width: 180px; }
       .day-section .day-section-schedulicity img:hover {
         opacity: 0.9; }
   .day-section.open-for-booking {
@@ -239,7 +256,8 @@ body {
     min-width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center; }
+    justify-content: center;
+    flex-wrap: wrap; }
     .home-booking-section .booking-buttons .booking-buttons-save, .home-booking-section .booking-buttons .booking-buttons-cancel {
       font-size: 20px;
       padding: 6px 12px;
@@ -264,6 +282,29 @@ body {
         opacity: 0.6; }
         .home-booking-section .booking-buttons .booking-buttons-save.disabled:hover {
           cursor: not-allowed; }
+    .home-booking-section .booking-buttons .confirmation {
+      padding: 20px 0px;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      width: 100%;
+      flex-basis: 100%;
+      min-width: 100%;
+      max-width: 100%; }
+    .home-booking-section .booking-buttons .confirmation-title {
+      text-align: center;
+      width: 100%;
+      flex-basis: 100%;
+      min-width: 100%;
+      max-width: 100%; }
+    .home-booking-section .booking-buttons .confirmation-text {
+      padding-top: 10px;
+      text-align: center;
+      width: 100%;
+      flex-basis: 100%;
+      min-width: 100%;
+      max-width: 100%;
+      font-size: 22px; }
 
 .booking-barber-schedule {
   padding: 25px 10px;
