--- a/src/style/style.css
+++ b/src/style/style.css
@@ -282,29 +282,34 @@ body {
         opacity: 0.6; }
         .home-booking-section .booking-buttons .booking-buttons-save.disabled:hover {
           cursor: not-allowed; }
-    .home-booking-section .booking-buttons .confirmation {
-      padding: 20px 0px;
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      width: 100%;
-      flex-basis: 100%;
-      min-width: 100%;
-      max-width: 100%; }
-    .home-booking-section .booking-buttons .confirmation-title {
-      text-align: center;
-      width: 100%;
-      flex-basis: 100%;
-      min-width: 100%;
-      max-width: 100%; }
-    .home-booking-section .booking-buttons .confirmation-text {
-      padding-top: 10px;
-      text-align: center;
-      width: 100%;
-      flex-basis: 100%;
-      min-width: 100%;
-      max-width: 100%;
-      font-size: 22px; }
+  .home-booking-section .confirmation {
+    padding: 20px 0px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    flex-basis: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    height: 110px; }
+  .home-booking-section .confirmation-title {
+    text-align: center;
+    width: 100%;
+    flex-basis: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    font-size: 18px; }
+  .home-booking-section .confirmation-text {
+    padding-top: 10px;
+    text-align: center;
+    width: 100%;
+    flex-basis: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    font-size: 30px; }
+  @media screen and (max-width: 500px) {
+    .home-booking-section .confirmation-text {
+      font-size: 22px; } }
 
 .booking-barber-schedule {
   padding: 25px 10px;
