--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -514,10 +514,11 @@ body {
     max-width: 525px;
     min-height: 200px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     .barber-appointments-title {
         margin-top: -16px;
+        margin-bottom: 16px;
         width: $full-width;
         max-width: $full-width;
         min-width: $full-width;
@@ -529,6 +530,7 @@ body {
         }
     }
     .single-appointment {
+        padding: 4px 10px;
         width: $full-width;
         min-width: $full-width;
         max-width: $full-width;
@@ -547,22 +549,68 @@ body {
             min-width: 16.66%;
         }
         .single-appointment-name {
-
+            flex-basis: 200px;
+            width: 200px;
+            max-width: 200px;
+            min-width: 200px;
         }
         .single-appointment-barber {
 
         }
         .single-appointment-start {
-
+            flex-basis: 55px;
+            width: 55px;
+            max-width: 55px;
+            min-width: 55px;
+            font-size: 16px;
+            font-weight: bold;
+            text-align: center;
         }
         .single-appointment-end {
-
+            flex-basis: 55px;
+            width: 55px;
+            max-width: 55px;
+            min-width: 55px;
+            font-size: 16px;
+            font-weight: bold;
+            text-align: center;
         }
         .single-appointment-phone {
-
+            padding: 0px 4px;
+            flex-basis: calc(100% - 310px);
+            width: calc(100% - 310px);
+            max-width: calc(100% - 310px);
+            min-width: 100px;
+            text-align: right;
+            a {
+                color: inherit;
+                text-decoration: none;
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
         }
         .single-appointment-email {
+            flex-basis: 155px;
+            width: 155px;
+            max-width: 155px;
+            min-width: 155px;
+        }
 
+        .single-appointment-open-slot-text {
+            padding: 4px 0px;
+            width: 100%;
+            max-width: 100%;
+            min-width: 100%;
+            text-align: center;
+            border-radius: 3px;
+            background-color: rgba(255, 255, 255, 0.3);
+            transition: background-color 120ms ease-in-out;
+            &:hover {
+                cursor: pointer;
+                color: $dark;
+                background-color: $light;
+            }
         }
     }
     .barber-appointments-no-apps {
